feat: implement admin dashboard and enhance sold-out UI across shop pages